--- a/index.html
+++ b/index.html
@@ -35,7 +35,13 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
 <!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-left:300px">
+  <p style = "margin-left: 70px; margin-right: 70px; margin-top: 100px">
+      Thousands of years ago, a cataclysmic event left the world in a state of disarray. Storms, earthquakes, and disease ravaged the planet. This event not only altered the Earth, but all who survived the Cataclysm as well. Whatever happened… it changed humanity forever. Over the ages, humans adapted to their new physiology – becoming something different entirely: Posthumans. Mutated and connected to the Earth - the connection between humankind and the planet has never been stronger. The people that survived eventually migrated to what is now known as Nucleus – humanity’s last bastion.
+      What remains of humanity lives within the walls of Nucleus; A massive eco-urban expanse built into the cliffs. It spans from the water on the shore below, to deep underground, and up into the sky. Nucleus is humanity’s haven from the world around them. A desolate, ruined world filled with danger and unknown perils. The city is enormous, so it’s civilians rely on water and wind-based public transportation. Boats, canoes, blimps, cable cars, and animals are the primary modes of transport. 
+      Though humanity survived the Cataclysm, much is unknown about the old world. Almost all physical and digital information was destroyed those many years ago. The only semblance of what came before are the stories passed down over the centuries from the Ancestors – those who survived. Venturing out past the boundaries of Nucleus is strictly forbidden, unless sanctioned by the Confab – the city’s governing body led by the mayor (Venus?).
+      The inhabitants of Nucleus say machines live out beyond the city. They’re called Synths and no one alive has ever seen one in person. They all say the Synths are evil and that anyone who has ever seen them has never lived to tell the tale. However, some suggest the Synths know more about the history of humanity than the posthumans in Nucleus do…
 
+  </p>
 
 <div class="w3-black w3-center w3-padding-24">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></div>
 
