--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <nav class="w3-sidebar w3-bar-block w3-white w3-animate-left w3-text-grey w3-collapse w3-top w3-center" style="z-index:3;width:300px;font-weight:bold" id="mySidebar"><br>
   <h3 class="w3-padding-64 w3-center"><b>Project<br>Nucleus</b></h3>
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-hide-large">CLOSE</a>
-  <a href="#art" onclick="w3_close()" class="w3-bar-item w3-button">CONCEPT ART</a> 
-  <a href="#world" onclick="w3_close()" class="w3-bar-item w3-button">WORLD</a> 
+  <a href="https://sparks989.github.io/3402CartoonPitch/" onclick="w3_close()" class="w3-bar-item w3-button">CONCEPT ART</a> 
+  <a href="https://sparks989.github.io/3402CartoonPitchWorld/" onclick="w3_close()" class="w3-bar-item w3-button">WORLD</a> 
   <a href="#character" onclick="w3_close()" class="w3-bar-item w3-button">CHARACTER BIOS</a> 
   <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">CONTACT</a>
 </nav>
@@ -40,7 +40,6 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       What remains of humanity lives within the walls of Nucleus; A massive eco-urban expanse built into the cliffs. It spans from the water on the shore below, to deep underground, and up into the sky. Nucleus is humanity’s haven from the world around them. A desolate, ruined world filled with danger and unknown perils. The city is enormous, so it’s civilians rely on water and wind-based public transportation. Boats, canoes, blimps, cable cars, and animals are the primary modes of transport. 
       Though humanity survived the Cataclysm, much is unknown about the old world. Almost all physical and digital information was destroyed those many years ago. The only semblance of what came before are the stories passed down over the centuries from the Ancestors – those who survived. Venturing out past the boundaries of Nucleus is strictly forbidden, unless sanctioned by the Confab – the city’s governing body led by the mayor (Venus?).
       The inhabitants of Nucleus say machines live out beyond the city. They’re called Synths and no one alive has ever seen one in person. They all say the Synths are evil and that anyone who has ever seen them has never lived to tell the tale. However, some suggest the Synths know more about the history of humanity than the posthumans in Nucleus do…
-
   </p>
 
 <div class="w3-black w3-center w3-padding-24">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></div>
