--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-left:300px">
   <h3 style = "margin-left: 20px; margin-top: 50px">World Setup</h3>
+  <h4 style = "margin-left: 30px; margin-top: 10px">Nucleus Theme</h4>
+  <audio style = "margin-left: 35px; margin-top: 10px" controls>
+  <source src="ColdReads/Nucleus_Theme.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+  </audio>
   <p style = "margin-left: 70px; margin-right: 70px; margin-top: 15px">
       Thousands of years ago, a cataclysmic event left the world in a state of disarray. Storms, earthquakes, and disease ravaged the planet. This event not only altered the Earth, but all who survived the Cataclysm as well. Whatever happened… it changed humanity forever. Over the ages, humans adapted to their new physiology – becoming something different entirely: Posthumans. Mutated and connected to the Earth - the connection between humankind and the planet has never been stronger. The people that survived eventually migrated to what is now known as Nucleus – humanity’s last bastion.
       What remains of humanity lives within the walls of Nucleus; A massive eco-urban expanse built into the cliffs. It spans from the water on the shore below, to deep underground, and up into the sky. Nucleus is humanity’s haven from the world around them. A desolate, ruined world filled with danger and unknown perils. The city is enormous, so it’s civilians rely on water and wind-based public transportation. Boats, canoes, blimps, cable cars, and animals are the primary modes of transport. 
